--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "cross-env": "^3.2.3",
     "jquery": "^3.1.1",
     "laravel-mix": "^0.8.3",
+    "loaders.css": "^0.1.2",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "loaders.css": "^0.1.2",
     "vue-router": "^2.4.0"
   }
 }
