Fixed style on all pages.

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "laravel-mix": "^0.8.3",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "vue-parallaxy": "^1.0.2"
   },
   "dependencies": {
     "loaders.css": "^0.1.2",
+    "vue-parallaxy": "^1.0.2",
     "vue-router": "^2.4.0"
   }
 }
