--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "laravel-mix": "^0.8.3",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.4",
+    "v-tooltip": "^1.1.6",
     "vue": "^2.1.10",
     "vue-parallaxy": "^1.0.2"
   },
